fix(content-item): fixing cta spacing in relation to the copy

--- a/packages/styles/scss/internal/content-item/_content-item.scss
+++ b/packages/styles/scss/internal/content-item/_content-item.scss
@@ -101,6 +101,10 @@
     margin-block-end: $spacing-05;
   }
 
+  ::slotted(#{$c4d-prefix}-link-with-icon) {
+    padding: $spacing-05 0 $spacing-07;
+  }
+
   :host(#{$c4d-prefix}-content-item-copy:not([has-cta])) {
     ::slotted(#{$c4d-prefix}-content-item-paragraph) {
       margin-block-end: 0;
